# DjangoMailingService

./: .env.example  .gitignore  README.md  clients.json  messages.json  pyproject.toml
config/: settings.py  urls.py
fixtures/: attempt.json  mailing.json  messages.json  users.json
mailing_service/: admin.py  forms.py  models.py  services.py  urls.py  views.py
mailing_service/migrations/: 0001_initial.py  0002_mailingmessage.py  0003_mailing.py  0004_rename_completed_at_mailing_end_time_and_more.py  0005_alter_mailing_end_time_alter_mailing_start_time.py  0006_attemptsendmailing.py  0007_attemptsendmailing_recipient.py  0008_mailing_is_sent.py  0009_remove_mailing_is_sent.py  0010_mailing_owner_mailingmessage_owner_and_more.py  0011_alter_mailing_options_alter_mailingmessage_options_and_more.py
mailing_service/templates/includes/: inc_menu.html
mailing_service/templates/mailing_service/: attempt_send_mailing.html  base.html  base_inner.html  home.html  mailing_confirm_delete.html  mailing_detail.html  mailing_form.html  mailing_list.html  mailing_recipient_confirm_delete.html  mailing_recipient_detail.html  mailing_recipient_form.html  mailing_recipient_list.html  message_confirm_delete.html  message_detail.html  message_form.html  (+1 more)
mailing_service/templatetags/: my_tags.py
staticfiles/: staticfiles.json
staticfiles/css/: cover.60a75ad292c1.css
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_token.py  0003_alter_user_options_user_is_blocked.py  0004_alter_user_options.py
users/templates/: login.html
(+12 files in other folders)
