[tool.poetry]
name = "djangomailingservice"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.2.8"
dotenv = "^0.9.9"
black = "^25.9.0"
psycopg2-binary = "^2.9.11"
pillow = "^12.0.0"
ipython = "^9.7.0"


[tool.poetry.group.lint.dependencies]
mypy = "^1.18.2"
flake8 = "^7.3.0"
isort = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
